Clean up HTML and  SCSS files + Create collection functions

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -11,6 +11,9 @@ $nav-item-size: calc(1.25vw + 0.75rem);
 $add-button-size: calc(1vw + 00.5rem);
 $todo-item-size: calc(0.25vw + 0.8rem);
 $footer-size: calc(0.5vw + 0.5rem);
+$input-size: calc(0.5vw + 0.4rem);
+$modal-header-size: calc(0.8vw + 0.75rem);
+$modal-sub-header-size: calc(0.8vw + 0.65rem);
 
 // Font weights
 $light: 300;
