--- a/src/styles/_defaults.scss
+++ b/src/styles/_defaults.scss
@@ -7,3 +7,21 @@
 body {
   height: 100dvh;
 }
+
+button {
+  border: none;
+  text-align: center;
+  box-shadow: 7px 6px 28px 1px rgba(0, 0, 0, 0.24);
+
+
+  &:hover {
+    cursor: pointer;
+  }
+
+  &:active {
+    box-shadow: 7px 6px 28px 1px rgba(0, 0, 0, 0.24);
+    transform: translateY(4px);
+  }
+}
+
+
