--- a/src/styles/_mixins.scss
+++ b/src/styles/_mixins.scss
@@ -3,3 +3,10 @@
   font-size: $size;
   font-weight: $weight;
 }
+
+@mixin set-flex($direction, $justify, $align) {
+  display: flex;
+  flex-direction: $direction;
+  justify-content: $justify;
+  align-items: $align;
+}
