--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -7,6 +7,7 @@ body {
   grid-template-columns: 1fr;
   grid-template-rows: 1fr 5fr 0.5fr;
 
+  position: relative;
 }
 
 header {
@@ -42,18 +43,18 @@ main {
 
         &:hover {
           background-color: $darker-blue;
+          cursor: pointer;
         }
       }
     }
 
     .collections-header {
-      display: flex;
-      align-items: center;
-      justify-content: space-between;
+      @include set-flex(row, space-between, center);
 
       padding-right: 0.25rem;
 
       button {
+        margin-right: 0.25rem;
         padding: 0 0.25rem;
         @include font-family-size-weight($sub-font, $add-button-size, $semi-bold);
         color: $grey;
@@ -62,12 +63,22 @@ main {
 
     .collection {
       margin: 0.5rem 0;
-      padding: 0.5rem 1.5rem;
+      padding: 0.5rem 0.25rem 0.5rem 1.5rem;
+
+      @include set-flex(row, space-between, center);
 
       font-size: calc($nav-item-size - 0.35rem);
 
+      button {
+        margin-right: 0.25rem;
+        padding: 0 0.4rem;
+        @include font-family-size-weight($sub-font, $add-button-size, $semi-bold);
+        color: $grey;
+      }
+
       &:hover {
         background-color: $darker-blue;
+        cursor: pointer;
       }
     }
   }
@@ -78,6 +89,103 @@ main {
 
     background-color: $cream;
     color: $grey;
+
+    .modal {
+      @include set-flex(column, center, center);
+      width: 40%;
+      padding: 1.3rem;
+      min-height: 25%;
+      position: absolute;
+      top: 25%;
+      left: 30%;
+      background-color: white;
+      border: 0.1rem solid $grey;
+      border-radius: 1rem;
+      z-index: 2;
+
+      textarea {
+        resize: none;
+      }
+
+      input,
+      textarea,
+      select,
+      option {
+        padding: 0.5rem 0.75rem;
+        border: 0.1rem solid #ddd;
+        border-radius: 5px;
+        font-size: $input-size;
+        @include font-family-size-weight($sub-font, $input-size, $normal);
+        color: $grey;
+      }
+
+      label {
+        @include font-family-size-weight($sub-font, $input-size, $normal);
+        margin-top: 1rem;
+        margin-bottom: 0.25rem;
+      }
+
+
+      .modal-header {
+        @include font-family-size-weight($main-font, $modal-header-size, $bold);
+        text-align: center;
+        width: 100%;
+        background-color: $blue;
+        padding: 0.25rem 0;
+        border-top-left-radius: 0.5rem;
+        border-top-right-radius: 0.5rem;
+      }
+
+      .modal-todo-form-container,
+      .modal-collection-form-container {
+        display: flex;
+        flex-direction: column;
+        padding: 0.4rem 0 0.4rem 0;
+
+      }
+
+
+      .hidden {
+        display: none;
+      }
+
+      .modal-controller-container {
+        button {
+          padding: 0.5rem 1rem;
+          color: white;
+          border-radius: 0.25rem;
+          font-size: 1em;
+          margin: 0.25rem 0.5rem;
+
+          @include font-family-size-weight($sub-font, $input-size, $bold);
+        }
+
+        #modal-add-btn {
+          background-color: rgb(13, 148, 13);
+        }
+
+        #modal-cancel-btn {
+          background-color: red;
+        }
+      }
+    }
+
+    .overlay {
+      position: fixed;
+      top: 0;
+      bottom: 0;
+      left: 0;
+      right: 0;
+      width: 100%;
+      height: 100%;
+      background: rgba(0, 0, 0, 0.5);
+      backdrop-filter: blur(3px);
+      z-index: 1;
+    }
+
+    .hidden {
+      display: none;
+    }
 
     .todo-header {
       display: flex;
@@ -101,7 +209,7 @@ main {
       align-items: center;
       width: 100%;
 
-      padding: 0.25rem 0.75rem;
+      padding: 0.35rem 0.75rem;
       @include font-family-size-weight($sub-font, $todo-item-size, $normal);
 
       &:hover {
@@ -116,11 +224,15 @@ main {
         width: 80%;
 
         input[type="checkbox"] {
-          accent-color: $grey
+          accent-color: $grey;
+
+          &:hover {
+            cursor: pointer;
+          }
         }
 
         label {
-          padding-left: 0.5rem
+          padding-left: 0.5rem;
         }
       }
 
@@ -128,9 +240,10 @@ main {
 
         button {
           @include font-family-size-weight($sub-font, $todo-item-size, $normal);
-          padding: 0.25rem;
+          padding: 0.3rem 0.6rem;
 
           color: $grey;
+          box-shadow: none;
         }
       }
     }
