--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -97,13 +97,13 @@ main .nav-container .collection:hover {
   background-color: #7eaad8;
   cursor: pointer;
 }
-main .todo-container {
+main .todo-modal-container {
   grid-column: 2/4;
   padding: 2.5rem 3.5rem;
   background-color: #faf3dd;
   color: #36454f;
 }
-main .todo-container .modal {
+main .todo-modal-container .modal {
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -119,13 +119,13 @@ main .todo-container .modal {
   border-radius: 1rem;
   z-index: 2;
 }
-main .todo-container .modal textarea {
+main .todo-modal-container .modal textarea {
   resize: none;
 }
-main .todo-container .modal input,
-main .todo-container .modal textarea,
-main .todo-container .modal select,
-main .todo-container .modal option {
+main .todo-modal-container .modal input,
+main .todo-modal-container .modal textarea,
+main .todo-modal-container .modal select,
+main .todo-modal-container .modal option {
   padding: 0.5rem 0.75rem;
   border: 0.1rem solid #ddd;
   border-radius: 5px;
@@ -135,14 +135,14 @@ main .todo-container .modal option {
   font-weight: 400;
   color: #36454f;
 }
-main .todo-container .modal label {
+main .todo-modal-container .modal label {
   font-family: "Josefin Sans", sans-serif;
   font-size: calc(0.5vw + 0.4rem);
   font-weight: 400;
   margin-top: 1rem;
   margin-bottom: 0.25rem;
 }
-main .todo-container .modal .modal-header {
+main .todo-modal-container .modal .modal-header {
   font-family: "Dancing Script", cursive;
   font-size: calc(0.8vw + 0.75rem);
   font-weight: 700;
@@ -153,16 +153,16 @@ main .todo-container .modal .modal-header {
   border-top-left-radius: 0.5rem;
   border-top-right-radius: 0.5rem;
 }
-main .todo-container .modal .modal-todo-form-container,
-main .todo-container .modal .modal-collection-form-container {
+main .todo-modal-container .modal .modal-todo-form-container,
+main .todo-modal-container .modal .modal-collection-form-container {
   display: flex;
   flex-direction: column;
   padding: 0.4rem 0 0.4rem 0;
 }
-main .todo-container .modal .hidden {
+main .todo-modal-container .modal .hidden {
   display: none;
 }
-main .todo-container .modal .modal-controller-container button {
+main .todo-modal-container .modal .modal-controller-container button {
   padding: 0.5rem 1rem;
   color: white;
   border-radius: 0.25rem;
@@ -172,13 +172,13 @@ main .todo-container .modal .modal-controller-container button {
   font-size: calc(0.5vw + 0.4rem);
   font-weight: 700;
 }
-main .todo-container .modal .modal-controller-container #modal-add-btn {
+main .todo-modal-container .modal .modal-controller-container #modal-add-btn {
   background-color: rgb(13, 148, 13);
 }
-main .todo-container .modal .modal-controller-container #modal-cancel-btn {
+main .todo-modal-container .modal .modal-controller-container #modal-cancel-btn {
   background-color: red;
 }
-main .todo-container .overlay {
+main .todo-modal-container .overlay {
   position: fixed;
   top: 0;
   bottom: 0;
@@ -191,10 +191,10 @@ main .todo-container .overlay {
           backdrop-filter: blur(3px);
   z-index: 1;
 }
-main .todo-container .hidden {
+main .todo-modal-container .hidden {
   display: none;
 }
-main .todo-container .todo-header {
+main .todo-modal-container .todo-header {
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -204,48 +204,66 @@ main .todo-container .todo-header {
   font-weight: 700;
   margin-bottom: 1.5rem;
 }
-main .todo-container .todo-header button {
+main .todo-modal-container .todo-header button {
   padding: 0 0.25rem;
   font-family: "Josefin Sans", sans-serif;
   font-size: calc(1vw + 0.5rem);
   font-weight: 500;
   color: #36454f;
 }
-main .todo-container .todo-item {
+main .todo-modal-container .todo-item {
   display: flex;
+  flex-direction: row;
   justify-content: space-between;
   align-items: center;
   width: 100%;
-  padding: 0.35rem 0.75rem;
+  padding: 0.1rem 0.75rem;
+  margin: 0.25rem 0;
   font-family: "Josefin Sans", sans-serif;
   font-size: calc(0.25vw + 0.8rem);
   font-weight: 400;
 }
-main .todo-container .todo-item:hover {
+main .todo-modal-container .todo-item:hover {
   background-color: #f2e4b4;
 }
-main .todo-container .todo-item .item-info-container {
+main .todo-modal-container .todo-item .item-info-container {
   display: flex;
-  align-items: center;
+  flex-direction: row;
   justify-content: space-between;
+  align-items: center;
   width: 80%;
 }
-main .todo-container .todo-item .item-info-container input[type=checkbox] {
+main .todo-modal-container .todo-item .item-info-container input[type=checkbox] {
   accent-color: #36454f;
 }
-main .todo-container .todo-item .item-info-container input[type=checkbox]:hover {
+main .todo-modal-container .todo-item .item-info-container input[type=checkbox]:hover {
   cursor: pointer;
 }
-main .todo-container .todo-item .item-info-container label {
-  padding-left: 0.5rem;
+main .todo-modal-container .todo-item .item-info-container label {
+  padding-left: 1rem;
+  cursor: pointer;
 }
-main .todo-container .todo-item .controller-div button {
+main .todo-modal-container .todo-item .controller-div {
+  width: 20%;
+  text-align: right;
+}
+main .todo-modal-container .todo-item .controller-div button {
   font-family: "Josefin Sans", sans-serif;
   font-size: calc(0.25vw + 0.8rem);
   font-weight: 400;
   padding: 0.3rem 0.6rem;
+  margin: 0.25rem;
   color: #36454f;
   box-shadow: none;
+}
+main .todo-modal-container .low {
+  border-left: 0.2rem solid green;
+}
+main .todo-modal-container .medium {
+  border-left: 0.2rem solid orange;
+}
+main .todo-modal-container .high {
+  border-left: 0.2rem solid red;
 }
 
 footer {
